--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ pydantic==2.9.2
 pydantic_core==2.23.4
 pydub==0.25.1
 PyJWT==2.10.0
+python-dotenv==1.0.1
+pytz==2024.2
 requests==2.32.3
 simpleaudio==1.0.4
 sniffio==1.3.1
